style.css
@font-face {
    font-family: "Inter";
    src:
        url(Inter-subset.woff2) format("woff2"), 
        url(Inter-subset.woff) format("woff"), 
        url(Inter-subset.ttf) format("truetype");
        unicode-range: U+20,U+21,U+28,U+29,U+2B,U+2C,U+2E,U+31,U+32,U+39,U+3F-41,U+43,U+44,U+48,U+49,U+4C-4E,U+53,U+57,U+61-70,U+72-77,U+79,U+7A;
        font-weight: 100 800;
}

* {
   font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
}

/* TYPE SCALE*/

/* 1rem/16.00px  */
/* 1.25rem/20.00px  */
/* 1.563rem/25.00px */
/* 1.953rem/31.25px */
/* 2.441rem/39.06px */
/* 3.052rem/48.83px*/


/* COLORS */

/* black #001219 */
/* dark blue #005F73 */
/* turquoise #0A9396 */
/* light turquoise #94D2BD */
/* light yellow #E9D8A6 */
/* dark yellow #E9D8A6 */
/* orange #E9D8A6 */
/* dark orange #BB3E03 */
/* red #AE2012 */
/* dark red #9B2226 */

body,
.main,
h1,
h2,
h3 {
    margin: 0;
    padding: 0;
}

body {
    margin: 4rem;
}

h1 {
    font-size: 3.052rem;
    margin-bottom: 0.5rem;
    font-weight: 700;
}

h2 {
    font-size: 1.953rem;
    font-weight: 500;
}

h3 {
    font-size: 1.563rem;
    font-weight: 450;
}

h2 span {
    font-size: inherit;
    font-weight: 200;
}

h3 span {
    font-size: inherit;
    font-weight: 300;
}

.emp {
    font-weight: 500;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

li {
    line-height: 2;
}

a,
a:visited {
    text-decoration: none;
    color: #0A9396;
    transition: color 150ms ease-in;
    position: relative;
}

a.icon-link,
a.icon-link:visited {
    color: #001219;
}

a:not(.icon-link)::after {
    content: "";
    position: absolute;
    bottom: -2px;
    left: 0;
    right: 0;
    height: 1px;
    background-color: currentColor;
}

a:hover,
a:focus,
a.icon-link:hover,
a.icon-link:focus {
    color: #BB3E03;
}

body {
    display: flex;
    align-items: center;
    justify-content: center;
}

.main {
    margin: 3.052rem;
    display: grid;
    grid-template-columns: 200px minmax(200px, 400px) minmax(200px, 400px);
    grid-template-rows: auto;
    column-gap: 3rem;
    row-gap: 1rem;
    grid-template-areas:
    " logo header header"
    " . intro intro"
    " . coding coding"
    " . backgroundInfo backgroundInfo"
    " . contact contact";
}

.logo {
    grid-area: logo;
    position: relative;
}

.header {
    grid-area: header;
}

.intro {
    grid-area: intro;
    padding-top: 3rem;
}

.coding {
    grid-area: coding;
}

.background {
    grid-area: backgroundInfo;
}

.contact {
    grid-area: contact;
}

svg {
    width: 100%;
    max-width: 250px;
    height: auto;
}

@media only screen and (max-width: 900px) {
    .main {
        margin: 1rem;
        grid-template-columns: 100%;
        grid-template-areas:
            " logo "
            " header"
            " intro "
            " realtime"
            " backgroundInfo"
            " contact ";
        }

    svg {
        max-width: 175px;
    }
}

@media only screen and (max-width: 600px) {
    * {
        font-size: 12px;
    }

    svg {
        max-width: 125px;
    }
}

.socials {
    display: flex;
    align-items: center;
    margin-top: 2rem;
}

.socials li {
    padding: 0 1rem;
}
.socials li:first-child {
    padding-left: 0;
}

.fab {
    font-size: 1.563rem;
 }

